<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/restaurant_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Columna Pastel de Choclo -->
    <ImageView
        android:id="@+id/ivPastel"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/pastel_de_choclo"
        android:scaleType="centerCrop"
        android:src="@drawable/pastel_choclo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <TextView
        android:id="@+id/tvPastelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pastel_de_choclo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivPastel"
        app:layout_constraintTop_toTopOf="@id/ivPastel" />

    <TextView
        android:id="@+id/tvPastelCantLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_label"
        app:layout_constraintBottom_toBottomOf="@id/etPastelCant"
        app:layout_constraintStart_toStartOf="@id/tvPastelNombre"
        app:layout_constraintTop_toTopOf="@id/etPastelCant" />

    <EditText
        android:id="@+id/etPastelCant"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="none"
        android:hint="0"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/tvPastelCantLabel"
        app:layout_constraintTop_toBottomOf="@id/tvPastelNombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvPastelSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero_pesos"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvPastelCantLabel"
        app:layout_constraintTop_toBottomOf="@id/etPastelCant" />

    <!-- Columna Cazuela -->
    <ImageView
        android:id="@+id/ivCazuela"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/cazuela"
        android:scaleType="centerCrop"
        android:src="@drawable/cazuela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPastel" />

    <TextView
        android:id="@+id/tvCazuelaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cazuela"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ivCazuela"
        app:layout_constraintTop_toTopOf="@id/ivCazuela" />

    <TextView
        android:id="@+id/tvCazuelaCantLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad_label"
        app:layout_constraintBottom_toBottomOf="@id/etCazuelaCant"
        app:layout_constraintStart_toStartOf="@id/tvCazuelaNombre"
        app:layout_constraintTop_toTopOf="@id/etCazuelaCant" />

    <EditText
        android:id="@+id/etCazuelaCant"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints="none"
        android:hint="0"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/tvCazuelaCantLabel"
        app:layout_constraintTop_toBottomOf="@id/tvCazuelaNombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCazuelaSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cero_pesos"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tvCazuelaCantLabel"
        app:layout_constraintTop_toBottomOf="@id/etCazuelaCant" />

    <!-- Seccion Totales -->
    <TextView
        android:id="@+id/tvComidaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/comida_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvComidaMonto"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCazuela" />

    <TextView
        android:id="@+id/tvComidaMonto"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/cero_pesos"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvComidaLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        app:layout_constraintEnd_toStartOf="@id/tvPropinaLabel"
        app:layout_constraintTop_toBottomOf="@id/tvComidaLabel"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvPropinaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propina_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/swPropina"
        app:layout_constraintEnd_toStartOf="@id/tvPropinaMonto"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/swPropina" />

    <TextView
        android:id="@+id/tvPropinaMonto"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/cero_pesos"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPropinaLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvTotalMonto"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swPropina" />

    <TextView
        android:id="@+id/tvTotalMonto"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:text="@string/cero_pesos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTotalLabel"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
